# vscode-bazel-debugger-showcase

./: .bazelrc  .gitignore  BUILD.bazel  README.md  WORKSPACE  package.json  tsconfig.json
sample/: BUILD.bazel  main.ts  tsconfig-test.json  tsconfig.json
